objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Creation</fullName>
        <description>To Create New Account</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Awaiting Boundary Support</fullName>
        </values>
        <values>
            <fullName>Awaiting Data Flow</fullName>
        </values>
        <values>
            <fullName>Awaiting Requestor</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated To Business</fullName>
        </values>
        <values>
            <fullName>Escalated To IT</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Work in Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BG Admin Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Case Support</fullName>
        <description>Test Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Requestor</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Work in Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Test Athena Support</fullName>
        <description>Testing for Athena support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Awaiting Boundary Support</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Awaiting Data Flow</fullName>
        </values>
        <values>
            <fullName>Awaiting Requestor</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Change Request Raised</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Deployed to Production</fullName>
        </values>
        <values>
            <fullName>Escalated To Business</fullName>
        </values>
        <values>
            <fullName>Escalated To IT</fullName>
        </values>
        <values>
            <fullName>Escalated to Engineering</fullName>
        </values>
        <values>
            <fullName>In Analysis</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Pending Implementation</fullName>
        </values>
        <values>
            <fullName>RFP</fullName>
        </values>
        <values>
            <fullName>Release to Production</fullName>
        </values>
        <values>
            <fullName>Release to UAT</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Updated by Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Release</fullName>
        </values>
        <values>
            <fullName>Waiting for Release %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Waiting for User Response</fullName>
        </values>
        <values>
            <fullName>Waiting for further information</fullName>
        </values>
        <values>
            <fullName>Waiting to Close</fullName>
        </values>
        <values>
            <fullName>Work in Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vertica Internal Case Management</fullName>
        <description>Vertica Process to manage internal requests by SFDC users to SFDC Admins.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Change Request Raised</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Deployed to Production</fullName>
        </values>
        <values>
            <fullName>Escalated To Business</fullName>
        </values>
        <values>
            <fullName>Escalated To IT</fullName>
        </values>
        <values>
            <fullName>In Analysis</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Pending Implementation</fullName>
        </values>
        <values>
            <fullName>RFP</fullName>
        </values>
        <values>
            <fullName>Release to Production</fullName>
        </values>
        <values>
            <fullName>Release to UAT</fullName>
        </values>
        <values>
            <fullName>Waiting for Release</fullName>
        </values>
        <values>
            <fullName>Waiting for User Response</fullName>
        </values>
        <values>
            <fullName>Waiting for further information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vertica Portal Case Management</fullName>
        <description>MyVertica user case submissions</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated to Engineering</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Updated by Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Release</fullName>
        </values>
        <values>
            <fullName>Waiting to Close</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vertica Support Case Management</fullName>
        <description>Vertica Customer Support Case Management (non-Portal cases)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated to Engineering</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Updated by Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Release</fullName>
        </values>
        <values>
            <fullName>Waiting for Release %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Waiting to Close</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMP_ID_Group_Number__c</fullName>
        <description>AMP ID and Group Number populated by CSIF/SRT</description>
        <label>AMP ID/Group Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>CASE (Account.Type, &quot;Analyst/Media&quot;,&quot;Analyst/Media&quot;, 
&quot;Channel Customer&quot;, &quot;Channel Customer&quot;, 
&quot;Cloud Customer&quot;, &quot;Cloud Customer&quot;, 
&quot;Competitor&quot;, &quot;Competitor&quot;, 
&quot;Customer&quot;, &quot;Customer&quot;, 
&quot;Greenplum Customer&quot;, &quot;Greenplum Customer&quot;, 
&quot;HP Internal&quot;, &quot;HP Internal&quot;, 
&quot;HP OEM&quot;, &quot;HP OEM&quot;, 
&quot;Install Competitor&quot;, &quot;Install Competitor&quot;, 
&quot;Investor&quot;, &quot;Investor&quot;, 
&quot;Netezza Customer&quot;,&quot;Netezza Customer&quot; , 
&quot;OEM&quot;, &quot;OEM&quot;, 
&quot;OEM Prospect&quot;, &quot;OEM Prospect&quot;, 
&quot;Other&quot;, &quot;Other&quot;, 
&quot;Partner&quot;, &quot;Partner&quot;, 
&quot;Partner Prospect&quot;, &quot;Partner Prospect&quot;, 
&quot;Prospect&quot;, &quot;Prospect&quot;, 
&quot;Reseller&quot;, &quot;Reseller&quot;, 
&quot;Reseller Prospect&quot;, &quot;Reseller Prospect&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminCaseSLA__c</fullName>
        <description>This calculated SLA field for Admin Record Types.</description>
        <label>AdminCaseSLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Folder_Name__c</fullName>
        <label>Approved Folder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_to_Team__c</fullName>
        <inlineHelpText>This field will drive dynamic assignment in combination with other criteria.</inlineHelpText>
        <label>Assign to Team</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai NBQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO Bucharest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO Bucharest Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO Bucharest PWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBS CEM Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multinational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multinational Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Review E2E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Review E2E Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Review Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Back Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW ESP BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW ESP CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW PWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW PWB BUCHAREST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Contact Center BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Contact Center FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS PWB Orders AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US NBQ Channel</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachments_URL__c</fullName>
        <description>New Field for Vertica : Filles attached with the Web Form (request ), saved</description>
        <label>Attachments URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for OAE</description>
        <inlineHelpText>Used for OAE</inlineHelpText>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <label>BG</label>
        <picklist>
            <picklistValues>
                <fullName>Cross-BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BugNumber__c</fullName>
        <description>New field for Vertica</description>
        <label>Eng Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Number__c</fullName>
        <label>Build Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Group__c</fullName>
        <label>Business Area Group</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB_DESIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB_INDIGO_IHPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB_SCITEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB_SPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <label>Business Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Relationship__c</fullName>
        <label>Business Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Advisory Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Authorized Distribution Service Provide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Authorized Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Corporate Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Direct Response Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Emerging Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Indent Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Independent Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Remarketing Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Self Maintainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Traditional Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Value Added Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Value Added Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Distribution Partner (ODP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Private Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Standard</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Shows if the request is for a standard or custom account.</description>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPQ_Approval_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in CPQ Track</description>
        <label>Approval Detail</label>
        <referenceTo>Approval__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote_Detail__c</fullName>
        <formula>HYPERLINK(&quot;/apex/CPQSAPLandingPage?QuoteDetailURL=&quot;+ Id  ,  CPQ_Quote_Number__c , &quot;_Blank&quot;)</formula>
        <label>Quote Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote_Number__c</fullName>
        <description>Used in CPQ Track</description>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote_URL__c</fullName>
        <description>Used in CPQ Track</description>
        <label>Quote URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_Business_Days__c</fullName>
        <formula>If(IsNull(ClosedDate),

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999)
+ (FLOOR(( Today() - DateValue(CreatedDate) )/7)*5-1),

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999)
+ (FLOOR(( DateValue(ClosedDate) - DateValue(CreatedDate) )/7)*5-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Business Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hour__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Aging__c</fullName>
        <description>This field is used to find case is aged by how many days. Finds number of days from its created date till today</description>
        <formula>TODAY()  -   DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Classification__c</fullName>
        <description>Shows the document volume or other criteria</description>
        <inlineHelpText>Shows the document volume or other criteria</inlineHelpText>
        <label>Request Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Comments__c</fullName>
        <label>Case Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Created_Hour__c</fullName>
        <formula>IF( 
(VALUE(LEFT(SUBSTITUTE(TEXT ( CreatedDate),LEFT(TEXT (CreatedDate),11),&quot;&quot;),2))-4)&lt;0, 
(VALUE(LEFT(SUBSTITUTE(TEXT ( CreatedDate),LEFT(TEXT (CreatedDate),11),&quot;&quot;),2))-4)+24, 
(VALUE(LEFT(SUBSTITUTE(TEXT ( CreatedDate),LEFT(TEXT (CreatedDate),11),&quot;&quot;),2))-4) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>new field for Vertica</description>
        <label>Case Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Origin_is_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field shows if case owner will need to be the person creating the case. It also shows if the case is assigned to a named person via the boundary system.</inlineHelpText>
        <label>Retain Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Requestor_Email__c</fullName>
        <description>Email address of case submitter</description>
        <label>Case Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Requestor__c</fullName>
        <description>Name of person requesting case</description>
        <label>Case Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Summary__c</fullName>
        <description>for vertica</description>
        <label>Case Resolution Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case_Weighting__c</fullName>
        <formula>1+
IF( Record_Name__c  = &quot;CO Case&quot;,
IF(ISNULL(Program_Type__c),+0,IF(Includes(Program_Type__c, &quot;Multinational&quot;), +2, +1))+
IF(ISPICKVAL(Rework_Revision__c, &quot;Rework&quot;), +1, +0) +
IF(ISPICKVAL( Rework_Revision__c, &quot;Revision&quot;), +1, +0)
+
(IF(ISPICKVAL(Expertise_Level__c, &quot;1&quot;), + 1,
IF(ISPICKVAL(Expertise_Level__c, &quot;2&quot;), + 2,
IF(ISPICKVAL(Expertise_Level__c, &quot;3&quot;), + 3, +0)))
+
IF(ISPICKVAL( Case_Classification__c , &quot;Small&quot;), +1,
IF(ISPICKVAL( Case_Classification__c , &quot;Medium&quot;), +2,
IF(ISPICKVAL( Case_Classification__c , &quot;Large&quot;), +3,
IF(ISPICKVAL( Case_Classification__c , &quot;Very Large&quot;), +4, +0))))),
IF((Record_Name__c  = &quot;Account Request&quot;  || Record_Name__c  = &quot;Admin Support&quot;), +VALUE(TEXT(Weight_for_Acct_Req_Admin_Sup__c)),+0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Weighting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Mgmt_Priority__c</fullName>
        <label>Change Mgmt Priority</label>
        <picklist>
            <picklistValues>
                <fullName>2 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Critical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Request_Status__c</fullName>
        <description>Field created for Admin CR process. It will be used to reflect current status of CR.</description>
        <label>Change Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need more info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIP/Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Case_Reason__c</fullName>
        <description>Reason for closing the case</description>
        <label>Close Case Reason</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed on first call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Rework Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Comments__c</fullName>
        <description>For vertica</description>
        <label>Close Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_on_First_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed on First Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoE_Comments__c</fullName>
        <label>CoE Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>